<resources>
    <string name="app_name">TravelConsuption</string>
    <string name="text_Header">Aplicativo para calcular o consumo de viagens</string>
    <string name="edit_Distance">Distância</string>
    <string name="text_Total_Km">Total em Quilômetros</string>
    <string name="edit_Price">Preço</string>
    <string name="text_Price_per_Liter">Preço por Litro</string>
    <string name="edit_Autonomy">Autonomia</string>
    <string name="text_Autonomy">Quilômetros por litro</string>
    <string name="text_Ans">SEU GASTO TOTAL SERÁ DE:</string>
    <string name="text_Label_Res">R$ 0</string>
    <string name="button_Calculate">CALCULAR</string>
    <string name="validation_fill_all_fields">Preencha todos os campos</string>
    <string name="no_div_zero">Não existe divisão por zero</string>





</resources>