<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/text_Header"
        android:text="@string/text_Header"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:textSize="32sp"
        android:textColor="@color/red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <EditText
        android:id="@+id/edit_Distance"
        android:layout_marginTop="32dp"
        android:hint="@string/edit_Distance"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/text_Total_Km"
        android:text="@string/text_Total_Km"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edit_Price"
        android:layout_marginTop="32dp"
        android:hint="@string/edit_Price"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/text_Price_per_Liter"
        android:text="@string/text_Price_per_Liter"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edit_Autonomy"
        android:layout_marginTop="32dp"
        android:hint="@string/edit_Autonomy"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/text_Autonomy"
        android:text="@string/text_Autonomy"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_Ans"
        android:text="@string/text_Ans"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_Label_Res"
        android:text="@string/text_Label_Res"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:textColor="@color/blue"
        android:gravity="center"
        android:textSize="32sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:onClick="teste"
        android:id="@+id/button_Calculate"
        android:text="@string/button_Calculate"
        android:textSize="20sp"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:backgroundTint="@color/green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        />


</LinearLayout>